--- a/configure.in
+++ b/configure.in
@@ -67,10 +67,10 @@ AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 
 PKG_CHECK_MODULES(YELP,
 [
+	gio-2.0
 	gconf-2.0
 	gnome-doc-utils >= 0.11.1
 	gtk+-unix-print-2.0
-	gnome-vfs-2.0 >= 1.1
 	gtk+-2.0 >= 2.10.0
 	libglade-2.0 >= 2.0.0
 	libgnome-2.0 >= 2.14.0
