Use "help-browser" named icon from fd.o icon naming spec instead
2008-06-27  Luca Ferretti  <elle.uca@libero.it>

	* src/yelp-main.c: (main):
	* src/yelp-window.c: (window_about_cb):
	* yelp.desktop.in.in:

	Use "help-browser" named icon from fd.o icon naming spec
	instead deprecated "gnome-help".


svn path=/trunk/; revision=3145

--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -3,7 +3,7 @@ _Name=Help
 _Comment=Get help with GNOME
 OnlyShowIn=GNOME;
 Exec=yelp
-Icon=gnome-help
+Icon=help-browser
 StartupNotify=true
 Terminal=false
 Type=Application
