Initial port to webkit, dropping gecko This will be broken Various things
* configure.in:
* src/yelp-html.cpp:
* src/yelp-html.h:
* src/yelp-io-channel.c:
* src/yelp-search-parser.c:
* src/yelp-window.c:
* src/yelp-main.c:
* src/Makefile.am:
Initial port to webkit, dropping gecko
This will be broken
Various things still need implemented:
 - copy / paste, select all

svn path=/branches/webkit/; revision=3152

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,10 @@
 bin_PROGRAMS = yelp
 
 yelp_SOURCES =							\
-	Yelper.cpp		Yelper.h			\
 	yelp-base.c		yelp-base.h			\
 	yelp-bookmarks.c 	yelp-bookmarks.h		\
 	yelp-debug.c		yelp-debug.h			\
 	yelp-error.c		yelp-error.h			\
-	yelp-gecko-utils.cpp	yelp-gecko-utils.h		\
 	yelp-html.cpp		yelp-html.h			\
 	yelp-io-channel.c	yelp-io-channel.h		\
 	yelp-settings.c		yelp-settings.h			\
@@ -14,10 +12,8 @@ yelp_SOURCES =							\
 	yelp-window.c 		yelp-window.h			\
 	yelp-marshal.c		yelp-marshal.h			\
 	yelp-main.c						\
-	yelp-print.c		yelp-print.h			\
 	yelp-page.c		yelp-page.h			\
 	yelp-transform.c	yelp-transform.h		\
-	yelp-gecko-services.h   yelp-gecko-services.cpp	        \
 	yelp-document.h		yelp-document.c			\
 	yelp-toc.h		yelp-toc.c			\
 	yelp-docbook.h		yelp-docbook.c			\
@@ -30,6 +26,7 @@ yelp_SOURCES =							\
 	yelp-search.c		yelp-search.h			\
 	yelp-search-parser.c 	yelp-search-parser.h
 
+
 YELP_DEFINES =								\
 	-DG_LOG_DOMAIN=\"Yelp\"						\
 	-DPREFIX=\""$(prefix)"\"					\
@@ -40,46 +37,18 @@ YELP_DEFINES =								\
 	-DSERVERDIR=\"$(libexecdir)\"					\
 	-DBINDIR=\""$(bindir)"\"					\
 	-DSHAREDIR=\""$(pkgdatadir)"\"                                  \
-	-DMOZILLA_HOME=\""$(MOZILLA_HOME)\""				\
 	-DGDU_ICON_PATH=\"$(GDU_ICON_PATH)\"
-
-mozilla_include_subdirs =	\
-	.		\
-	commandhandler  \
-	content		\
-	docshell	\
-	dom		\
-	fastfind	\
-	find		\
-	gtkembedmoz	\
-	gfx		\
-	layout		\
-	necko		\
-	pref		\
-	string		\
-	uriloader	\
-	webbrwsr	\
-	webshell	\
-	widget
-
-yelp_CPPFLAGS =									\
-	-I$(top_srcdir)								\
-	-I$(top_builddir)/src							\
-	$(YELP_DEFINES)								\
-	$(AM_CPPFLAGS)
-
-yelp_CPPFLAGS += $(MOZILLA_COMPONENT_CFLAGS)
-yelp_CPPFLAGS += $(addprefix -I$(MOZILLA_INCLUDE_ROOT)/,$(mozilla_include_subdirs))
 
 yelp_CFLAGS =				\
 	$(YELP_CFLAGS)			\
 	$(YELP_SEARCH_CFLAGS)		\
-	$(AM_CFLAGS)
+	$(AM_CFLAGS)			\
+	$(YELP_WEBKIT_CFLAGS)
 
 yelp_CXXFLAGS =				\
 	$(YELP_CFLAGS)			\
 	$(YELP_SEARCH_CFLAGS)		\
-	$(MOZILLA_COMPONENT_CFLAGS)	\
+	$(YELP_WEBKIT_CFLAGS)		\
 	$(AM_CXXFLAGS)
 
 yelp_LDADD =				\
@@ -89,16 +58,10 @@ yelp_LDADD =				\
 	$(Z_LIBS)			\
 	$(BZ_LIBS)			\
 	$(LZMADEC_LIBS)			\
-	$(X_LIBS)			\
-	$(MOZILLA_COMPONENT_LIBS)	\
-	$(MOZILLA_EXTRA_LIBS)		\
-	$(MOZILLA_GLUE_LIBS)
+	$(YELP_WEBKIT_LIBS)		\
+	$(X_LIBS)
 
 yelp_LDFLAGS = $(AM_LDFLAGS)
-
-if !HAVE_GECKO_XPCOM_GLUE
-yelp_LDFLAGS += -R$(MOZILLA_HOME)
-endif
 
 #check_PROGRAMS =		\
 #	test-document		\
