Make linking within pages and across pages work again Make loading of figures work
svn path=/branches/webkit/; revision=3163

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -68,7 +68,18 @@ FIXME: yelp:cache no longer works
 <!-- == db.xref.target == -->
 <xsl:template name="db.xref.target">
   <xsl:param name="linkend"/>
-  <xsl:value-of select="concat('#', $linkend)"/>
+  <xsl:param name="depth_in_chunk">
+    <xsl:call-template name="db.chunk.depth-in-chunk"/>
+  </xsl:param>
+
+  <xsl:choose>
+    <xsl:when test="$depth_in_chunk >= $db.chunk.max_depth">
+      <xsl:value-of select="concat('#', $linkend)"/>
+    </xsl:when>
+    <xsl:otherwise>
+      <xsl:value-of select="concat('?', $linkend)"/>
+    </xsl:otherwise>
+  </xsl:choose>
 </xsl:template>
 
 <!-- == db2html.css.custom == -->
