--- a/yelp.desktop.in.in
+++ b/yelp.desktop.in.in
@@ -7,7 +7,7 @@ Icon=help-browser
 StartupNotify=true
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Core;
+Categories=GNOME;GTK;Core;Documentation;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=Yelp
 X-GNOME-Bugzilla-Component=general
