--- a/configure.in
+++ b/configure.in
@@ -244,8 +244,8 @@ libxul*) gecko_min_version=1.9 ;;
 *) AC_MSG_ERROR([$gecko_cv_gecko is not supported])
 esac
 
-if test $MOZILLA = libxul-embedding; then
-	PKG_CHECK_MODULES([MOZILLA_COMPONENT],[libxul-embedding $gecko_cv_extra_pkg_dependencies])
+if test "$MOZILLA" = "libxul-embedding" -o "$MOZILLA" = "libxul"; then
+	PKG_CHECK_MODULES([MOZILLA_COMPONENT],[$MOZILLA $gecko_cv_extra_pkg_dependencies])
 	MOZILLA_COMPONENT_CFLAGS="$MOZILLA_COMPONENT_CFLAGS `$PKG_CONFIG --cflags ${gecko_cv_gecko}` `$PKG_CONFIG --define-variable=includetype=unstable --cflags ${gecko_cv_gecko}`"
 else
 	PKG_CHECK_MODULES([MOZILLA_COMPONENT],[${gecko_cv_gecko}-xpcom >= $gecko_min_version $gecko_cv_extra_pkg_dependencies])
