Port from Glade to GtkBuilder
Port done by Thomas Andersen - bug #579894

--- a/data/ui/Makefile.am
+++ b/data/ui/Makefile.am
@@ -1,5 +1,5 @@
 uidir = $(datadir)/yelp/ui
 
-ui_DATA = yelp.glade yelp-ui.xml yelp-search-ui.xml
+ui_DATA = yelp-bookmarks.ui yelp-bookmarks-add.ui yelp-open-location.ui yelp-preferences.ui yelp-ui.xml yelp-search-ui.xml
 
 EXTRA_DIST = $(ui_DATA)
