--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -4,7 +4,10 @@
 data/info.xml.in
 data/man.xml.in
 data/toc.xml.in
-data/ui/yelp.glade
+data/ui/yelp-bookmarks.ui
+data/ui/yelp-bookmark-add.ui
+data/ui/yelp-open-location.ui
+data/ui/yelp-preferences.ui
 data/yelp.schemas.in
 src/yelp-base.c
 src/yelp-bookmarks.c
