--- a/configure.in
+++ b/configure.in
@@ -72,8 +72,6 @@ PKG_CHECK_MODULES(YELP,
 	gnome-doc-utils >= 0.17.2
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.10.0
-	libgnome-2.0 >= 2.14.0
-	libgnomeui-2.0 >= 2.14.0
 	libxml-2.0 >= 2.6.5
 	libxslt >= 1.1.4
 	libexslt >= 0.8.1
@@ -256,6 +254,34 @@ else
 	PKG_CHECK_MODULES([MOZILLA_COMPONENT],[${gecko_cv_gecko}-xpcom >= $gecko_min_version $gecko_cv_extra_pkg_dependencies])
 fi
 
+# *****
+# SMClient
+# *****
+
+GDK_TARGET="$($PKG_CONFIG --variable target gdk-2.0)"
+
+SMCLIENT_PKGS=
+AC_MSG_CHECKING([which smclient backend to use])
+AC_ARG_WITH([smclient],
+  [AS_HELP_STRING([--with-smclient],[which smclient backend to use (xsmp/win32/quartz)])],
+  [],
+  [case "$GDK_TARGET" in
+    x11) with_smclient=xsmp SMCLIENT_PKGS="sm" ;;
+    win32|quartz) with_smclient=$GDK_TARGET ;;
+    *) with_smclient=no ;;
+   esac])
+AC_MSG_RESULT([$with_smclient])
+
+if test "$with_smclient" != "no"; then
+  PKG_CHECK_MODULES([SMCLIENT],[$SMCLIENT_PKGS])
+  AC_DEFINE([WITH_SMCLIENT],[1],[Define if smclient is enabled])
+fi
+
+AM_CONDITIONAL([WITH_SMCLIENT],[test "$with_smclient" != "no"])
+AM_CONDITIONAL([WITH_SMCLIENT_XSMP],[test "$with_smclient" = "xsmp"])
+AM_CONDITIONAL([WITH_SMCLIENT_WIN32],[test "$with_smclient" = "win32"])
+AM_CONDITIONAL([WITH_SMCLIENT_QUARTZ],[test "$with_smclient" = "quartz"])
+
 # Set flags
 
 AM_CPPFLAGS="$AM_CPPFLAGS $DEPRECATION_FLAGS"
@@ -294,4 +320,6 @@ yelp-$VERSION:
 	Debug enabled:            ${enable_debug}
 	Search backend:           ${search_backend}
 	Mozilla version:          ${MOZILLA}
+	Using SMClient:           ${with_smclient}
+
 "
