Added yelp-mallard.c to POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -18,6 +18,7 @@ src/yelp-error.c
 src/yelp-info.c
 src/yelp-io-channel.c
 src/yelp-main.c
+src/yelp-mallard.c
 src/yelp-man.c
 src/yelp-page.c
 src/yelp-print.c
