Only add a script tag if a javascript file will be used
When converting docbook files to HTML, when there was no javascript to
be used, an invalid src was being generated, which caused WebKit
security checks to fail.

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -88,11 +88,13 @@ FIXME: yelp:cache no longer works
 
 <!-- == db2html.division.head.extra == -->
 <xsl:template name="db2html.division.head.extra">
-  <script type="text/javascript">
-    <xsl:attribute name="src">
-      <xsl:value-of select="concat('file://', $yelp.javascript)"/>
-    </xsl:attribute>
-  </script>
+  <xsl:if test="string($yelp.javascript) != ''">
+    <script type="text/javascript">
+      <xsl:attribute name="src">
+        <xsl:value-of select="concat('file://', $yelp.javascript)"/>
+      </xsl:attribute>
+    </script>
+  </xsl:if>
 </xsl:template>
 
 </xsl:stylesheet>
