Adding new egg session management files to POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,6 +9,8 @@ data/toc.xml.in
 [type: gettext/glade]data/ui/yelp-open-location.ui
 [type: gettext/glade]data/ui/yelp-preferences.ui
 data/yelp.schemas.in
+src/eggdesktopfile.c
+src/eggsmclient.c
 src/yelp-base.c
 src/yelp-bookmarks.c
 src/yelp-db-print.c
