--- a/configure.in
+++ b/configure.in
@@ -294,6 +294,7 @@ AC_SUBST([AM_LDFLAGS])
 
 AC_CONFIG_FILES([
 Makefile
+libyelp/Makefile
 src/Makefile
 stylesheets/Makefile
 stylesheets/db2html.xsl
