--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,10 +1,13 @@
+YELP_COMMON_CFLAGS =				\
+	$(YELP_CFLAGS)				\
+	$(AM_CFLAGS)				\
+	$(YELP_DEFINES)				\
+	-I$(top_srcdir)/libyelp
+YELP_COMMON_LDADD =				\
+	$(YELP_LIBS)				\
+	$(top_builddir)/libyelp/libyelp.la
+
 check_PROGRAMS = test-uri
 
-test_uri_SOURCES =				\
-	$(top_srcdir)/libyelp/yelp-uri.c	\
-	$(top_srcdir)/libyelp/yelp-uri.h	\
-	test-uri.c
-
-test_uri_CFLAGS = $(YELP_CFLAGS) $(AM_CFLAGS) $(YELP_DEFINES) -I$(top_srcdir)/libyelp `pkg-config --cflags gio-unix-2.0`
-test_uri_LDADD = $(YELP_LIBS)
-test_uri_LDFLAGS = $(AM_LDFLAGS) `pkg-config --libs gio-unix-2.0`
+test_uri_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_uri_LDADD = $(YELP_COMMON_LDADD)
