--- a/configure.in
+++ b/configure.in
@@ -55,6 +55,8 @@ PKG_CHECK_MODULES(YELP,
 [
 	gio-2.0
 	gconf-2.0
+	gio-2.0
+	gio-unix-2.0
 	gnome-doc-utils >= 0.17.2
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.10.0
@@ -64,7 +66,9 @@ PKG_CHECK_MODULES(YELP,
 	libstartup-notification-1.0 >= 0.8
 	dbus-glib-1
 	rarian >= 0.7.0
+	webkit-1.0
 ])
+
 AC_SUBST([YELP_CFLAGS])
 AC_SUBST([YELP_LIBS])
 
@@ -209,14 +213,6 @@ dnl <= Check for bzip2 > 1.0.0
 	   ])
     dnl =>
 AC_SUBST(BZ_LIBS)
-
-# *****
-# Webkit
-# *****
-  PKG_CHECK_MODULES(YELP_WEBKIT, "webkit-1.0")
-  AC_SUBST(YELP_WEBKIT_CFLAGS)
-  AC_SUBST(YELP_WEBKIT_LIBS)
-  AC_DEFINE(WEBKIT_BACKEND, 1, [Webkit Backend])
 
 # *****
 # SMClient
