[libyelp] YelpView basic implementation, YelpSimpleDocument for (X)HTML

--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -2,7 +2,9 @@ noinst_LTLIBRARIES = libyelp.la
 
 libyelp_la_SOURCES =		\
 	yelp-debug.c		\
+	yelp-document.c		\
 	yelp-location-entry.c	\
+	yelp-simple-document.c	\
 	yelp-uri.c		\
 	yelp-view.c
 
