--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,10 +9,14 @@ YELP_COMMON_LDADD =				\
 
 check_PROGRAMS =				\
 	test-location-entry			\
-	test-uri
+	test-uri				\
+	test-view
 
 test_location_entry_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_location_entry_LDADD = $(YELP_COMMON_LDADD)
 
 test_uri_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_uri_LDADD = $(YELP_COMMON_LDADD)
+
+test_view_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_view_LDADD = $(YELP_COMMON_LDADD)
