--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -1,15 +1,17 @@
 noinst_LTLIBRARIES = libyelp.la
 
-libyelp_la_SOURCES =		\
-	yelp-debug.c		\
-	yelp-document.c		\
-	yelp-location-entry.c	\
-	yelp-simple-document.c	\
-	yelp-uri.c		\
+libyelp_la_SOURCES =				\
+	yelp-debug.c				\
+	yelp-document.c				\
+	yelp-location-entry.c			\
+	yelp-settings.c				\
+	yelp-simple-document.c			\
+	yelp-uri.c				\
 	yelp-view.c
 
-libyelp_la_CFLAGS =		\
-	$(YELP_CFLAGS)
+libyelp_la_CFLAGS =				\
+	$(YELP_CFLAGS)				\
+	-DGDU_ICON_PATH=\"$(GDU_ICON_PATH)\"
 
-libyelp_la_LIBADD =		\
+libyelp_la_LIBADD =				\
 	$(YELP_LIBS)
