--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,6 +2,7 @@ YELP_COMMON_CFLAGS =				\
 	$(YELP_CFLAGS)				\
 	$(AM_CFLAGS)				\
 	$(YELP_DEFINES)				\
+	-DDATADIR=\""$(datadir)"\"		\
 	-I$(top_srcdir)/libyelp
 YELP_COMMON_LDADD =				\
 	$(YELP_LIBS)				\
@@ -10,6 +11,7 @@ YELP_COMMON_LDADD =				\
 check_PROGRAMS =				\
 	test-location-entry			\
 	test-settings				\
+	test-transform				\
 	test-uri				\
 	test-view
 
@@ -18,6 +20,9 @@ test_location_entry_LDADD = $(YELP_COMMON_LDADD)
 
 test_settings_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_settings_LDADD = $(YELP_COMMON_LDADD)
+
+test_transform_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_transform_LDADD = $(YELP_COMMON_LDADD)
 
 test_uri_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_uri_LDADD = $(YELP_COMMON_LDADD)
