[libyelp] Changed relative links to use xref: URI scheme
This really simplifies the processing, as we don't have to guess from
the existence and position of # to determine if something is a cross
reference or just an internal link.

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -73,10 +73,10 @@ FIXME: yelp:cache no longer works
   </xsl:param>
   <xsl:choose>
     <xsl:when test="$depth_in_chunk != 0">
-      <xsl:value-of select="concat('#', $linkend)"/>
+      <xsl:value-of select="concat('xref:#', $linkend)"/>
     </xsl:when>
     <xsl:otherwise>
-      <xsl:value-of select="concat('?', $linkend)"/>
+      <xsl:value-of select="concat('xref:', $linkend)"/>
     </xsl:otherwise>
   </xsl:choose>
 </xsl:template>
