[libyelp] Adding yelp-io-channel to libyelp
This is only an internal implementation detail.  I want to switch over
to GIO.  I'll need to create a GInputStream that automatically decodes
to replace YelpIOChannel.

--- a/libyelp/Makefile.am
+++ b/libyelp/Makefile.am
@@ -5,6 +5,7 @@ libyelp_la_SOURCES =				\
 	yelp-error.c				\
 	yelp-docbook-document.c			\
 	yelp-document.c				\
+	yelp-io-channel.c			\
 	yelp-location-entry.c			\
 	yelp-mallard-document.c			\
 	yelp-settings.c				\
