--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,14 +6,21 @@ YELP_COMMON_CFLAGS =				\
 	-I$(top_srcdir)/libyelp
 YELP_COMMON_LDADD =				\
 	$(YELP_LIBS)				\
+	$(Z_LIBS)				\
+	$(BZ_LIBS)				\
+	$(LZMADEC_LIBS)				\
 	$(top_builddir)/libyelp/libyelp.la
 
 check_PROGRAMS =				\
+	test-io-channel				\
 	test-location-entry			\
 	test-settings				\
 	test-transform				\
 	test-uri				\
 	test-view
+
+test_io_channel_CFLAGS = $(YELP_COMMON_CFLAGS)
+test_io_channel_LDADD = $(YELP_COMMON_LDADD)
 
 test_location_entry_CFLAGS = $(YELP_COMMON_CFLAGS)
 test_location_entry_LDADD = $(YELP_COMMON_LDADD)
