--- a/configure.in
+++ b/configure.in
@@ -69,7 +69,7 @@ PKG_CHECK_MODULES(YELP,
 [
 	gio-2.0
 	gconf-2.0
-	yelp-xsl >= 0.99.1
+	gnome-doc-utils >= 0.19.1
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.18.0
 	libxml-2.0 >= 2.6.5
@@ -84,20 +84,20 @@ AC_SUBST([YELP_LIBS])
 
 AC_PATH_PROGS(SED, gsed sed)
 
-XSLT_PATH="`$PKG_CONFIG --variable=xsltdir yelp-xsl`"
+XSLT_PATH="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
 DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
 AC_SUBST(DB_TITLE)
 
-DB2HTML="`$PKG_CONFIG --variable=db2xhtml yelp-xsl`"
+DB2HTML="`$PKG_CONFIG --variable=db2xhtml gnome-doc-utils`"
 AC_SUBST(DB2HTML)
 
-MAL2HTML="`$PKG_CONFIG --variable=mal2xhtml yelp-xsl`"
+MAL2HTML="`$PKG_CONFIG --variable=mal2xhtml gnome-doc-utils`"
 AC_SUBST(MAL2HTML)
 
-GDU_GETTEXT="`$PKG_CONFIG --variable=gettext yelp-xsl`"
+GDU_GETTEXT="`$PKG_CONFIG --variable=gettext gnome-doc-utils`"
 AC_SUBST(GDU_GETTEXT)
 
-GDU_ICON_PATH="`$PKG_CONFIG --variable=icondir yelp-xsl`"
+GDU_ICON_PATH="`$PKG_CONFIG --variable=icondir gnome-doc-utils`"
 AC_SUBST(GDU_ICON_PATH)
 
 GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
