--- a/stylesheets/mal2html.xsl.in
+++ b/stylesheets/mal2html.xsl.in
@@ -57,9 +57,11 @@
   <xsl:call-template name="yelp.common.css"/>
   <xsl:text>
 body { padding: 0; }
-div.head {
+div.headbar {
   padding: 0.2em 0 0 0;
   margin: 0 0 1em 0;
+  max-width: 100%;
+  width: 100%;
   background-color: </xsl:text>
     <xsl:value-of select="$theme.color.gray_background"/><xsl:text>;
   border-bottom: solid 1px </xsl:text>
