remove usage of GNOME_COMMON_INIT
GNOME_COMMON_INIT does not work with autoreconf, so remove its usage.
The ACLOCAL_AMFLAGS substitution is sufficient.

--- a/configure.in
+++ b/configure.in
@@ -1,16 +1,14 @@
 AC_INIT([Yelp],[2.27.4],[http://bugzilla.gnome.org/enter_bug.cgi?product=yelp],[yelp])
 
-GNOME_COMMON_INIT
-
 AC_CONFIG_SRCDIR([src/yelp-main.c])
 AC_CONFIG_HEADERS([config.h])
 
 AM_INIT_AUTOMAKE([1.9 dist-bzip2 no-dist-gzip])
 AM_MAINTAINER_MODE
 
-AC_CONFIG_MACRO_DIR(m4)
+AC_CONFIG_MACRO_DIR([m4])
 
-AC_SUBST(ACLOCAL_AMFLAGS, "\${ACLOCAL_FLAGS}")
+AC_SUBST(ACLOCAL_AMFLAGS, "-I m4 \${ACLOCAL_FLAGS}")
 
 AC_PROG_LN_S
 AC_PROG_CC
