make libtoolize happy

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
+ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
+
 SUBDIRS = libyelp src stylesheets po data tests
 
 @INTLTOOL_DESKTOP_RULE@
@@ -26,3 +28,4 @@ DISTCLEANFILES = 					\
 CLEANFILES = $(desktop_DATA)
 
 DISTCHECK_CONFIGURE_FLAGS = --disable-scrollkeeper --enable-gtk-doc
+
