--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -5,7 +5,7 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
-<xsl:import href="@DB2HTML@"/>
+<xsl:import href="@XSL_DB2XHTML@"/>
 
 <xsl:include href="yelp-common.xsl"/>
 
