--- a/stylesheets/mal2html.xsl.in
+++ b/stylesheets/mal2html.xsl.in
@@ -6,7 +6,7 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
-<xsl:import href="@MAL2HTML@"/>
+<xsl:import href="@XSL_MAL2XHTML@"/>
 
 <xsl:include href="yelp-common.xsl"/>
 
