--- a/configure.in
+++ b/configure.in
@@ -23,6 +23,7 @@ GTK_DOC_CHECK(1.9)
 
 GNOME_DEBUG_CHECK
 GNOME_COMPILE_WARNINGS([maximum])
+GNOME_MAINTAINER_MODE_DEFINES
 
 MORE_WARN_FLAGS=
 DEPRECATION_FLAGS=
@@ -52,7 +53,7 @@ PKG_CHECK_MODULES(YELP,
 	gio-2.0
 	gio-2.0
 	gio-unix-2.0
-	gnome-doc-utils >= 0.17.2
+	yelp-xsl
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.16.0
 	libxml-2.0 >= 2.6.5
@@ -69,21 +70,21 @@ AC_SUBST([YELP_LIBS])
 
 AC_PATH_PROGS(SED, gsed sed)
 
-XSLT_PATH="`$PKG_CONFIG --variable=xsltdir gnome-doc-utils`"
-DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
-AC_SUBST(DB_TITLE)
+XSL_PATH="`$PKG_CONFIG --variable=xsltdir yelp-xsl`"
+XSL_DB_TITLE="$XSLT_PATH""/docbook/common/db-title.xsl"
+AC_SUBST(XSL_DB_TITLE)
 
-DB2HTML="`$PKG_CONFIG --variable=db2xhtml gnome-doc-utils`"
-AC_SUBST(DB2HTML)
+XSL_DB2XHTML="`$PKG_CONFIG --variable=db2xhtml yelp-xsl`"
+AC_SUBST(XSL_DB2XHTML)
 
-MAL2HTML="`$PKG_CONFIG --variable=mal2xhtml gnome-doc-utils`"
-AC_SUBST(MAL2HTML)
+XSL_MAL2XHTML="`$PKG_CONFIG --variable=mal2xhtml yelp-xsl`"
+AC_SUBST(XSL_MAL2XHTML)
 
-GDU_GETTEXT="`$PKG_CONFIG --variable=gettext gnome-doc-utils`"
-AC_SUBST(GDU_GETTEXT)
+XSL_GETTEXT="`$PKG_CONFIG --variable=gettext yelp-xsl`"
+AC_SUBST(XSL_GETTEXT)
 
-GDU_ICON_PATH="`$PKG_CONFIG --variable=icondir gnome-doc-utils`"
-AC_SUBST(GDU_ICON_PATH)
+YELP_ICON_PATH="`$PKG_CONFIG --variable=icondir yelp-xsl`"
+AC_SUBST(YELP_ICON_PATH)
 
 GLIB_GENMARSHAL="`$PKG_CONFIG --variable=glib_genmarshal glib-2.0`"
 AC_SUBST(GLIB_GENMARSHAL)
