--- a/stylesheets/toc2html.xsl.in
+++ b/stylesheets/toc2html.xsl.in
@@ -5,7 +5,7 @@
                 extension-element-prefixes="yelp"
                 version="1.0">
 
-<xsl:import href="@GDU_GETTEXT@"/>
+<xsl:import href="@XSL_GETTEXT@"/>
 
 <xsl:param name="help_icon"/>
 <xsl:param name="help_icon_size"/>
