--- a/configure.in
+++ b/configure.in
@@ -51,9 +51,7 @@ AM_GLIB_DEFINE_LOCALEDIR([GNOMELOCALEDIR])
 PKG_CHECK_MODULES(YELP,
 [
 	gio-2.0
-	gio-2.0
 	gio-unix-2.0
-	yelp-xsl
 	gtk+-unix-print-2.0
 	gtk+-2.0 >= 2.16.0
 	libxml-2.0 >= 2.6.5
@@ -62,7 +60,9 @@ PKG_CHECK_MODULES(YELP,
 	libstartup-notification-1.0 >= 0.8
 	dbus-glib-1
 	rarian >= 0.7.0
+	unique-1.0
 	webkit-1.0 >= 1.1.15
+	yelp-xsl
 ])
 
 AC_SUBST([YELP_CFLAGS])
