Adding --editor-mode, show revision status and comments
Still to do: editor mode in docbook, show .page.stub files

--- a/stylesheets/db2html.xsl.in
+++ b/stylesheets/db2html.xsl.in
@@ -69,7 +69,7 @@ FIXME: yelp:cache no longer works
 <!-- == db.xref.target == -->
 <xsl:template name="db.xref.target">
   <xsl:param name="linkend"/>
-  <xsl:value-of select="concat('xref:', $linkend)"/>
+  <xsl:value-of select="concat('xref:', $linkend, '#', $linkend)"/>
 </xsl:template>
 
 <!-- == db2html.division.head.extra == -->
